--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
+
 <!DOCTYPE html>
 <html lang="it">
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gestione Lavori Pro</title>
+    <title>Progetta</title>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
 <script type="importmap">
 {
   "imports": {
