--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="it">
 <head>
@@ -15,7 +14,11 @@
     "recharts": "https://aistudiocdn.com/recharts@^3.3.0",
     "vite": "https://aistudiocdn.com/vite@^7.1.12",
     "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.0",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.28.0"
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.28.0",
+    "firebase/app": "https://aistudiocdn.com/firebase@^10.12.2/app",
+    "firebase/auth": "https://aistudiocdn.com/firebase@^10.12.2/auth",
+    "firebase/firestore": "https://aistudiocdn.com/firebase@^10.12.2/firestore",
+    "firebase/": "https://aistudiocdn.com/firebase@^12.5.0/"
   }
 }
 </script>
